--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 }
 
 .box {
+  margin-top: 5%;
   background-color: gray;
   color: black;
   font-family: Arial, Helvetica, sans-serif;
@@ -54,4 +55,17 @@ ul li a {
 
 ul li a:hover {
   color: red;
+}
+
+.pic img {
+  margin-top: 20px;
+  margin-bottom: 40px;
+  border-radius: 50%;
+}
+.phone img {
+  border-radius: 50%;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, 50%);
 }
