--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 }
 
 .name {
-  color: blue;
+  color: gray;
   margin-left: 40.8%;
 }
 
@@ -13,7 +13,10 @@
 
 .box {
   margin-top: 5%;
-  background-color: gray;
+  margin: 0 30px 0 30px;
+  border: 3px solid gray;
+  padding: 20px;
+  border-radius: 0 10px 0 10px;
   color: black;
   font-family: Arial, Helvetica, sans-serif;
 }
