--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,10 @@
   margin-top: 5%;
   margin: 0 30px 0 30px;
   border: 3px solid gray;
+  background-color: black;
   padding: 20px;
   border-radius: 0 10px 0 10px;
-  color: black;
+  color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -57,7 +58,7 @@ ul li a {
 }
 
 ul li a:hover {
-  color: red;
+  color: gray;
 }
 
 .pic img {
